--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,16 +3,16 @@
 	  
 	  <form method="POST" action="/">
 	    <div  class="form-group">
-	      <input type="text" class="form-control" id="player1" name="Player1" placeholder="Player 1 ...">
+	      <input type="text" class="form-control" id="player1" name="player1" placeholder="Player 1 ...">
 	    </div>
 	    <div class="form-group">
-	      <input type="text" class="form-control" id="player2" name="Player2" placeholder="Player 2 ...">
+	      <input type="text" class="form-control" id="player2" name="player2" placeholder="Player 2 ...">
 	    </div>
 	    <div class="form-group">
-	      <input type="text" class="form-control" id="player3" name="Player3" placeholder="Player 3 ...">
+	      <input type="text" class="form-control" id="player3" name="player3" placeholder="Player 3 ...">
 	    </div>
 	    <div class="form-group">
-	      <input type="text" class="form-control" id="player4" name="Player4" placeholder="Player 4 ...">
+	      <input type="text" class="form-control" id="player4" name="player4" placeholder="Player 4 ...">
 	    </div>
 	    <button class="button_glow">Create a new game</button>
 	  </form>
