--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ button {
 .button_glow:active {
 	box-shadow: 0 0 0 transparent;
 	background-color: #C1ABA6;
-	transition: none; 
+	transition: none;
 }
 
 .button_slide {
@@ -66,17 +66,9 @@ th, td {
     padding: 8px;
 }
 
-.sum-of-score {
+tr:nth-child(even){background-color: #f2f2f2}
+
+th {
     background-color: #BF1363;
     color: white;
-}
-tr:nth-child(odd) {
-	background-color: #f2f2f2;
-}
-.score-box {
-	border: 1px solid #000000;
-    width: 50px;
-    padding-left: 3px;
-    border-radius: 5px;
-    background-color: #ffffff;
 }
