--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -3,17 +3,17 @@
 	  
 	  <form >
 	    <div  class="form-group">
-	      <input type="text" class="form-control" id="player1"  value="{{playerName}}">
+	      <input type="text" class="form-control" id="player1"  value="{{playerName1}}">
 	    </div>
 	    <div class="form-group">
-	      <input type="text" class="form-control" id="player2" value="{{playerName}}">
+	      <input type="text" class="form-control" id="player2" value="{{playerName2}}">
 	    </div>
 	    <div class="form-group">
-	      <input type="text" class="form-control" id="player3" value="{{playerName}}">
+	      <input type="text" class="form-control" id="player3" value="{{playerName3}}">
 	    </div>
 	    <div class="form-group">
-	      <input type="text" class="form-control" id="player4" value="{{playerName}}">
+	      <input type="text" class="form-control" id="player4" value="{{playerName4}}">
 	    </div>
-	    <button class="button_glow">Create a new game</button>
+	    
 	  </form>
 	
